[gd_scene load_steps=15 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/colored_packed.png" type="Texture" id=2]
[ext_resource path="res://CarrotPlot.tscn" type="PackedScene" id=3]
[ext_resource path="res://Animal.tscn" type="PackedScene" id=4]
[ext_resource path="res://PearTree.tscn" type="PackedScene" id=5]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://Tree.tscn" type="PackedScene" id=7]
[ext_resource path="res://Main.gd" type="Script" id=8]
[ext_resource path="res://Coop.tscn" type="PackedScene" id=9]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 4.06291, 0.626427, 12.4354, 0, 12.7144, 16, 4.342, 15.9759 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 4.24965, 15.6968, 3.97057, 5.09173, 15.9711, 5.09173, 15.692, 12.3478, 12.9012, 12.0688, 12.9012, 15.6968 )

[sub_resource type="TileSet" id=5]
0/name = "colored_packed.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 16, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
2/name = "colored_packed.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "colored_packed.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 16, 0, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "colored_packed.png 4"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 32, 0, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "colored_packed.png 5"
5/texture = ExtResource( 2 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 48, 0, 16, 16 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "colored_packed.png 6"
6/texture = ExtResource( 2 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 64, 0, 16, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "colored_packed.png 7"
7/texture = ExtResource( 2 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 80, 0, 16, 16 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "colored_packed.png 8"
8/texture = ExtResource( 2 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 128, 64, 16, 16 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape = SubResource( 3 )
8/shape_one_way = false
8/shape_one_way_margin = 1.0
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0
9/name = "colored_packed.png 9"
9/texture = ExtResource( 2 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 144, 64, 16, 16 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape = SubResource( 4 )
9/shape_one_way = false
9/shape_one_way_margin = 1.0
9/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
9/z_index = 0
10/name = "colored_packed.png 10"
10/texture = ExtResource( 2 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 0, 240, 16, 16 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "colored_packed.png 11"
11/texture = ExtResource( 2 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 96, 80, 16, 16 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "colored_packed.png 12"
12/texture = ExtResource( 2 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 48, 32, 16, 16 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape = SubResource( 2 )
12/shape_one_way = false
12/shape_one_way_margin = 1.0
12/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
12/z_index = 0

[node name="Main" type="Node2D"]
script = ExtResource( 8 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = SubResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 12, 0, 1, 12, 0, 2, 12, 0, 3, 12, 0, 4, 536870924, 0, 5, 536870924, 0, 6, 536870924, 0, 7, 536870924, 0, 8, 536870924, 0, 9, 536870924, 0, 10, 8, 0, 11, 536870924, 0, 12, 536870924, 0, 13, 536870924, 0, 14, 536870924, 0, 15, 536870924, 0, 16, 536870924, 0, 17, 536870924, 0, 18, 536870924, 0, 19, 536870924, 0, 20, 536870924, 0, 21, 536870924, 0, 22, 536870924, 0, 23, 536870924, 0, 24, 536870924, 0, 25, 536870924, 0, 26, 536870924, 0, 27, 536870924, 0, 28, 536870924, 0, 29, 536870924, 0, 30, 536870924, 0, 31, 536870924, 0, 63, 0, 0, 65536, 12, 0, 65537, 2, 0, 65538, 2, 0, 65539, 2, 0, 65540, 2, 0, 65541, 12, 0, 65542, 2, 0, 65543, 2, 0, 65544, 2, 0, 65545, 2, 0, 65546, 8, 0, 65547, 2, 0, 65548, 2, 0, 65549, 2, 0, 65550, 2, 0, 65551, 2, 0, 65552, 2, 0, 65553, 2, 0, 65554, 2, 0, 65555, 2, 0, 65556, 2, 0, 65557, 2, 0, 65558, 2, 0, 65559, 2, 0, 65560, 2, 0, 65561, 2, 0, 65562, 2, 0, 65563, 2, 0, 65564, 2, 0, 65565, 2, 0, 65566, 2, 0, 65567, 536870924, 0, 65599, 0, 0, 131072, 536870924, 0, 131073, 2, 0, 131074, 2, 0, 131075, 2, 0, 131076, 2, 0, 131077, 12, 0, 131078, 2, 0, 131079, 2, 0, 131080, 2, 0, 131081, 2, 0, 131082, 11, 0, 131083, 2, 0, 131084, 2, 0, 131085, 2, 0, 131086, 2, 0, 131087, 2, 0, 131088, 2, 0, 131089, 3, 0, 131090, 2, 0, 131091, 2, 0, 131092, 2, 0, 131093, 2, 0, 131094, 2, 0, 131095, 2, 0, 131096, 2, 0, 131097, 2, 0, 131098, 2, 0, 131099, 2, 0, 131100, 3, 0, 131101, 2, 0, 131102, 2, 0, 131103, 536870924, 0, 131135, 0, 0, 196608, 536870924, 0, 196609, 12, 0, 196610, 12, 0, 196611, 12, 0, 196612, 12, 0, 196613, 12, 0, 196614, 2, 0, 196615, 2, 0, 196616, 2, 0, 196617, 2, 0, 196618, 8, 0, 196619, 2, 0, 196620, 2, 0, 196621, 2, 0, 196622, 2, 0, 196623, 2, 0, 196624, 2, 0, 196625, 2, 0, 196626, 2, 0, 196627, 2, 0, 196628, 2, 0, 196629, 2, 0, 196630, 2, 0, 196631, 2, 0, 196632, 2, 0, 196633, 2, 0, 196634, 2, 0, 196635, 2, 0, 196636, 2, 0, 196637, 2, 0, 196638, 2, 0, 196639, 536870924, 0, 196671, 0, 0, 262144, 536870924, 0, 262145, 2, 0, 262146, 2, 0, 262147, 2, 0, 262148, 2, 0, 262149, 2, 0, 262150, 2, 0, 262151, 2, 0, 262152, 2, 0, 262153, 2, 0, 262154, 8, 0, 262155, 2, 0, 262156, 2, 0, 262157, 2, 0, 262158, 2, 0, 262159, 2, 0, 262160, 2, 0, 262161, 2, 0, 262162, 2, 0, 262163, 2, 0, 262164, 2, 0, 262165, 2, 0, 262166, 2, 0, 262167, 2, 0, 262168, 2, 0, 262169, 2, 0, 262170, 2, 0, 262171, 2, 0, 262172, 2, 0, 262173, 2, 0, 262174, 2, 0, 262175, 536870924, 0, 262207, 0, 0, 327680, 536870924, 0, 327681, 2, 0, 327682, 3, 0, 327683, 2, 0, 327684, 2, 0, 327685, 2, 0, 327686, 2, 0, 327687, 2, 0, 327688, 2, 0, 327689, 2, 0, 327690, -1073741815, 0, 327691, -1073741816, 0, 327692, -1073741816, 0, 327693, -1073741816, 0, 327694, -1073741816, 0, 327695, -1073741816, 0, 327696, -1073741816, 0, 327697, -1073741816, 0, 327698, -1073741816, 0, 327699, -1610612727, 0, 327700, 2, 0, 327701, 2, 0, 327702, 2, 0, 327703, 2, 0, 327704, 2, 0, 327705, 2, 0, 327706, 2, 0, 327707, 2, 0, 327708, 2, 0, 327709, 2, 0, 327710, 2, 0, 327711, 536870924, 0, 327743, 0, 0, 393216, 536870924, 0, 393217, 2, 0, 393218, 2, 0, 393219, 2, 0, 393220, 2, 0, 393221, 2, 0, 393222, 2, 0, 393223, 2, 0, 393224, 2, 0, 393225, 2, 0, 393226, 2, 0, 393227, 2, 0, 393228, 2, 0, 393229, 2, 0, 393230, 2, 0, 393231, 2, 0, 393232, 2, 0, 393233, 2, 0, 393234, 2, 0, 393235, 8, 0, 393236, 2, 0, 393237, 2, 0, 393238, 2, 0, 393239, 3, 0, 393240, 2, 0, 393241, 2, 0, 393242, 2, 0, 393243, 2, 0, 393244, 2, 0, 393245, 2, 0, 393246, 2, 0, 393247, 536870924, 0, 393279, 0, 0, 458752, 536870924, 0, 458753, 2, 0, 458754, 2, 0, 458755, 2, 0, 458756, 2, 0, 458757, 2, 0, 458758, 2, 0, 458759, 2, 0, 458760, 2, 0, 458761, 2, 0, 458762, 3, 0, 458763, 2, 0, 458764, 2, 0, 458765, 2, 0, 458766, 2, 0, 458767, 2, 0, 458768, 2, 0, 458769, 2, 0, 458770, 2, 0, 458771, 8, 0, 458772, 2, 0, 458773, 2, 0, 458774, 2, 0, 458775, 2, 0, 458776, 2, 0, 458777, 2, 0, 458778, 2, 0, 458779, 2, 0, 458780, 2, 0, 458781, 2, 0, 458782, 2, 0, 458783, 536870924, 0, 458815, 0, 0, 524288, 536870924, 0, 524289, 2, 0, 524290, 2, 0, 524291, 2, 0, 524292, 2, 0, 524293, 2, 0, 524294, 2, 0, 524295, 2, 0, 524296, 2, 0, 524297, 2, 0, 524298, 2, 0, 524299, 2, 0, 524300, 2, 0, 524301, 2, 0, 524302, 2, 0, 524303, 2, 0, 524304, 2, 0, 524305, 2, 0, 524306, 2, 0, 524307, 8, 0, 524308, 2, 0, 524309, 2, 0, 524310, 2, 0, 524311, 2, 0, 524312, 2, 0, 524313, 2, 0, 524314, 2, 0, 524315, 2, 0, 524316, 2, 0, 524317, 2, 0, 524318, 2, 0, 524319, 536870924, 0, 524351, 0, 0, 589824, 536870924, 0, 589825, 2, 0, 589826, 2, 0, 589827, 2, 0, 589828, 2, 0, 589829, 2, 0, 589830, 2, 0, 589831, 2, 0, 589832, 2, 0, 589833, 2, 0, 589834, 2, 0, 589835, 2, 0, 589836, 2, 0, 589837, 2, 0, 589838, 2, 0, 589839, 2, 0, 589840, 2, 0, 589841, 2, 0, 589842, 2, 0, 589843, 11, 0, 589844, 2, 0, 589845, 2, 0, 589846, 2, 0, 589847, 2, 0, 589848, 2, 0, 589849, 2, 0, 589850, 2, 0, 589851, 2, 0, 589852, 2, 0, 589853, 2, 0, 589854, 2, 0, 589855, 536870924, 0, 589887, 0, 0, 655360, 536870924, 0, 655361, 2, 0, 655362, 2, 0, 655363, 2, 0, 655364, 2, 0, 655365, 2, 0, 655366, 2, 0, 655367, 2, 0, 655368, 2, 0, 655369, 2, 0, 655370, 2, 0, 655371, 2, 0, 655372, 2, 0, 655373, 2, 0, 655374, 2, 0, 655375, 2, 0, 655376, 2, 0, 655377, 2, 0, 655378, 2, 0, 655379, 8, 0, 655380, 2, 0, 655381, 2, 0, 655382, 2, 0, 655383, 2, 0, 655384, 2, 0, 655385, 2, 0, 655386, 2, 0, 655387, 2, 0, 655388, 2, 0, 655389, 2, 0, 655390, 2, 0, 655391, 536870924, 0, 655423, 0, 0, 720896, 536870924, 0, 720897, 2, 0, 720898, 2, 0, 720899, 2, 0, 720900, 2, 0, 720901, 2, 0, 720902, 2, 0, 720903, 2, 0, 720904, 2, 0, 720905, 2, 0, 720906, 2, 0, 720907, 2, 0, 720908, 2, 0, 720909, 2, 0, 720910, 2, 0, 720911, 2, 0, 720912, 2, 0, 720913, 2, 0, 720914, 2, 0, 720915, 8, 0, 720916, 2, 0, 720917, 2, 0, 720918, 2, 0, 720919, 2, 0, 720920, 2, 0, 720921, 2, 0, 720922, 2, 0, 720923, 2, 0, 720924, 2, 0, 720925, 2, 0, 720926, 2, 0, 720927, 536870924, 0, 720959, 0, 0, 786432, 536870924, 0, 786433, 2, 0, 786434, 2, 0, 786435, 2, 0, 786436, 2, 0, 786437, 2, 0, 786438, 2, 0, 786439, 2, 0, 786440, 2, 0, 786441, 2, 0, 786442, 2, 0, 786443, 2, 0, 786444, 2, 0, 786445, 2, 0, 786446, 2, 0, 786447, 2, 0, 786448, 2, 0, 786449, 2, 0, 786450, 2, 0, 786451, 8, 0, 786452, 2, 0, 786453, 2, 0, 786454, 2, 0, 786455, 2, 0, 786456, 2, 0, 786457, 2, 0, 786458, 2, 0, 786459, 2, 0, 786460, 2, 0, 786461, 2, 0, 786462, 2, 0, 786463, 536870924, 0, 786495, 0, 0, 851968, 536870924, 0, 851969, 2, 0, 851970, 2, 0, 851971, 3, 0, 851972, 2, 0, 851973, 2, 0, 851974, 2, 0, 851975, 2, 0, 851976, 2, 0, 851977, 2, 0, 851978, 2, 0, 851979, 2, 0, 851980, 2, 0, 851981, 2, 0, 851982, 2, 0, 851983, 2, 0, 851984, 2, 0, 851985, 9, 0, 851986, -1610612728, 0, 851987, 1610612745, 0, 851988, 2, 0, 851989, 2, 0, 851990, 2, 0, 851991, 2, 0, 851992, 2, 0, 851993, 2, 0, 851994, 2, 0, 851995, 2, 0, 851996, 2, 0, 851997, 2, 0, 851998, 2, 0, 851999, 536870924, 0, 852031, 0, 0, 917504, 536870924, 0, 917505, 2, 0, 917506, 2, 0, 917507, 2, 0, 917508, 2, 0, 917509, 2, 0, 917510, 2, 0, 917511, 2, 0, 917512, 2, 0, 917513, 2, 0, 917514, 2, 0, 917515, 2, 0, 917516, 2, 0, 917517, 2, 0, 917518, 2, 0, 917519, 2, 0, 917520, 2, 0, 917521, 8, 0, 917522, 2, 0, 917523, 2, 0, 917524, 2, 0, 917525, 2, 0, 917526, 3, 0, 917527, 2, 0, 917528, 2, 0, 917529, 2, 0, 917530, 2, 0, 917531, 2, 0, 917532, 2, 0, 917533, 2, 0, 917534, 2, 0, 917535, 536870924, 0, 917567, 0, 0, 983040, 536870924, 0, 983041, 2, 0, 983042, 2, 0, 983043, 2, 0, 983044, 2, 0, 983045, 2, 0, 983046, 2, 0, 983047, 2, 0, 983048, 2, 0, 983049, 2, 0, 983050, 2, 0, 983051, 2, 0, 983052, 2, 0, 983053, 2, 0, 983054, 2, 0, 983055, 2, 0, 983056, 2, 0, 983057, 8, 0, 983058, 2, 0, 983059, 2, 0, 983060, 2, 0, 983061, 2, 0, 983062, 2, 0, 983063, 2, 0, 983064, 2, 0, 983065, 2, 0, 983066, 2, 0, 983067, 2, 0, 983068, 2, 0, 983069, 3, 0, 983070, 2, 0, 983071, 536870924, 0, 983103, 0, 0, 1048576, 536870924, 0, 1048577, 2, 0, 1048578, 2, 0, 1048579, 2, 0, 1048580, 2, 0, 1048581, 2, 0, 1048582, 2, 0, 1048583, 2, 0, 1048584, 2, 0, 1048585, 2, 0, 1048586, 2, 0, 1048587, 3, 0, 1048588, 2, 0, 1048589, 2, 0, 1048590, 2, 0, 1048591, 2, 0, 1048592, 2, 0, 1048593, 11, 0, 1048594, 2, 0, 1048595, 2, 0, 1048596, 2, 0, 1048597, 2, 0, 1048598, 2, 0, 1048599, 2, 0, 1048600, 2, 0, 1048601, 2, 0, 1048602, 2, 0, 1048603, 2, 0, 1048604, 2, 0, 1048605, 2, 0, 1048606, 2, 0, 1048607, 536870924, 0, 1048639, 0, 0, 1114112, 536870924, 0, 1114113, 2, 0, 1114114, 2, 0, 1114115, 2, 0, 1114116, 2, 0, 1114117, 2, 0, 1114118, 2, 0, 1114119, 2, 0, 1114120, 2, 0, 1114121, 2, 0, 1114122, 2, 0, 1114123, 2, 0, 1114124, 2, 0, 1114125, 2, 0, 1114126, 2, 0, 1114127, 2, 0, 1114128, 2, 0, 1114129, 8, 0, 1114130, 2, 0, 1114131, 2, 0, 1114132, 2, 0, 1114133, 2, 0, 1114134, 2, 0, 1114135, 2, 0, 1114136, 2, 0, 1114137, 2, 0, 1114138, 2, 0, 1114139, 2, 0, 1114140, 2, 0, 1114141, 2, 0, 1114142, 2, 0, 1114143, 536870924, 0, 1114175, 0, 0, 1179648, 536870924, 0, 1179649, 536870924, 0, 1179650, 536870924, 0, 1179651, 536870924, 0, 1179652, 536870924, 0, 1179653, 536870924, 0, 1179654, 536870924, 0, 1179655, 536870924, 0, 1179656, 536870924, 0, 1179657, 536870924, 0, 1179658, 536870924, 0, 1179659, 536870924, 0, 1179660, 536870924, 0, 1179661, 536870924, 0, 1179662, 536870924, 0, 1179663, 536870924, 0, 1179664, 536870924, 0, 1179665, 8, 0, 1179666, 536870924, 0, 1179667, 536870924, 0, 1179668, 536870924, 0, 1179669, 536870924, 0, 1179670, 536870924, 0, 1179671, 536870924, 0, 1179672, 536870924, 0, 1179673, 536870924, 0, 1179674, 536870924, 0, 1179675, 536870924, 0, 1179676, 536870924, 0, 1179677, 536870924, 0, 1179678, 536870924, 0, 1179679, 536870924, 0, 1179711, 0, 0, 1245247, 0, 0, 1310783, 0, 0, 1376319, 0, 0, 1441855, 0, 0, 1507391, 0, 0, 1572927, 0, 0, 1638463, 0, 0, 1703999, 0, 0, 1769535, 0, 0, 1835070, 0, 0, 1835071, 0, 0, 1900606, 0, 0, 1900607, 0, 0, 1966142, 0, 0, 1966143, 0, 0, 2031678, 0, 0, 2031679, 0, 0, 2097214, 0, 0, 2097215, 0, 0, 2162750, 0, 0, 2162751, 0, 0, 2228286, 0, 0, 2228287, 0, 0, 2293822, 0, 0, 2293823, 0, 0, 2359359, 0, 0, 2424895, 0, 0 )

[node name="CarrotPlots" type="Node" parent="."]

[node name="CarrotPlot" parent="CarrotPlots" instance=ExtResource( 3 )]
position = Vector2( 120, 264 )

[node name="CarrotPlot3" parent="CarrotPlots" instance=ExtResource( 3 )]
position = Vector2( 232, 136 )

[node name="CarrotPlot4" parent="CarrotPlots" instance=ExtResource( 3 )]
position = Vector2( 408, 472 )

[node name="CarrotPlot6" parent="CarrotPlots" instance=ExtResource( 3 )]
position = Vector2( 168, 520 )

[node name="CarrotPlot7" parent="CarrotPlots" instance=ExtResource( 3 )]
position = Vector2( 280, 336 )

[node name="CarrotPlot9" parent="CarrotPlots" instance=ExtResource( 3 )]
position = Vector2( 520, 328 )

[node name="PearTrees" type="Node" parent="."]

[node name="PearTree" parent="PearTrees" instance=ExtResource( 5 )]
position = Vector2( 736, 336 )

[node name="PearTree2" parent="PearTrees" instance=ExtResource( 5 )]
position = Vector2( 920, 168 )

[node name="PearTree3" parent="PearTrees" instance=ExtResource( 5 )]
position = Vector2( 928, 376 )

[node name="PearTree4" parent="PearTrees" instance=ExtResource( 5 )]
position = Vector2( 776, 80 )

[node name="PearTree5" parent="PearTrees" instance=ExtResource( 5 )]
position = Vector2( 432, 112 )

[node name="PearTree6" parent="PearTrees" instance=ExtResource( 5 )]
position = Vector2( 696, 544 )

[node name="Trees" type="Node" parent="."]

[node name="Tree" parent="Trees" instance=ExtResource( 7 )]
position = Vector2( 224, 456 )

[node name="Tree4" parent="Trees" instance=ExtResource( 7 )]
position = Vector2( 792, 488 )

[node name="Tree5" parent="Trees" instance=ExtResource( 7 )]
position = Vector2( 840, 272 )

[node name="Tree6" parent="Trees" instance=ExtResource( 7 )]
position = Vector2( 656, 120 )

[node name="Tree7" parent="Trees" instance=ExtResource( 7 )]
position = Vector2( 888, 112 )

[node name="Tree8" parent="Trees" instance=ExtResource( 7 )]
position = Vector2( 960, 544 )

[node name="Tree9" parent="Trees" instance=ExtResource( 7 )]
position = Vector2( 72, 384 )

[node name="Tree10" parent="Trees" instance=ExtResource( 7 )]
position = Vector2( 256, 64 )

[node name="Tree2" parent="Trees" instance=ExtResource( 7 )]
position = Vector2( 224, 232 )

[node name="Tree3" parent="Trees" instance=ExtResource( 7 )]
position = Vector2( 416, 328 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 144, 152 )

[node name="Animal" parent="." instance=ExtResource( 4 )]
position = Vector2( 536, 272 )
z_index = 1

[node name="Animal2" parent="." instance=ExtResource( 4 )]
position = Vector2( 568, 256 )
z_index = 1

[node name="Animal3" parent="." instance=ExtResource( 4 )]
position = Vector2( 568, 256 )
z_index = 1

[node name="Animal4" parent="." instance=ExtResource( 4 )]
position = Vector2( 568, 256 )
z_index = 1

[node name="Animal5" parent="." instance=ExtResource( 4 )]
position = Vector2( 568, 256 )
z_index = 1

[node name="Coop" parent="." instance=ExtResource( 9 )]
position = Vector2( 568, 216 )
scale = Vector2( 2, 2 )

[node name="HUD" parent="." instance=ExtResource( 6 )]
position = Vector2( 64, 72 )

[node name="Timer" type="Timer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
